VO-2911 - Payments and Checkout overflow issues
- Fixed the search filter boxes to flow together better
- Fixed headers wrapping at smaller sizes

--- a/app/styles/lang/_es.scss
+++ b/app/styles/lang/_es.scss
@@ -62,4 +62,59 @@ body.lang_es {
     }
 
   }
+
+
+  /* Payments */
+  #PaymentsPage {
+    @media (max-width: 1090px) {
+
+      .well-title {
+        font-size: 16px;
+
+        .well-sub-title, a {
+          font-size: 13px;
+          margin-top: 2px;
+        }
+        button {
+          font-size: 14px;
+          margin-top: 6px;
+        }
+      }
+
+    }
+
+    .filter-options {
+      .span5 {
+        width: 120px;
+        margin-top: -14px;
+      }
+      .span7 {
+        width: 232px;
+      }
+
+      .range-end {
+        width: 125px;
+      }
+    }
+
+    @media (min-width: 1170px) {
+      .filter-options {
+        .span5 {
+          width: 180px;
+          margin-top: 0;
+        }
+      }
+    }
+  }
+
+  /* Checkout */
+  #CheckoutPage {
+    @media (max-width: 1090px) {
+
+      .well-title {
+        font-size: 16px;
+      }
+
+    }
+  }
 }
